indower-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.image-pull-secret: indower-app-registry
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: indower-app
  name: indower-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: indower-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.image-pull-secret: indower-app-registry
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: indower-app
    spec:
      containers:
        - image: 91297/indower-web-app:test
          name: indower-app
          ports:
            - containerPort: 8080
          resources: {}
          imagePullPolicy: Always
      imagePullSecrets:
        - name: indower-app-registry
      restartPolicy: Always
status: {}
