indower-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.image-pull-secret: indower-app-registry
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: indower-app
  name: indower-app
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
      nodePort: 30004
  type: LoadBalancer
  selector:
    io.kompose.service: indower-app
status:
  loadBalancer: {}
