indower-app-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indower-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: indower-ip-test
  labels:
    app: indower
spec:
  defaultBackend:
    service:
      name: indower-app
      port:
        number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: indower-app
  labels:
    app: indower
spec:
  type: NodePort
  selector:
    app: indower-app
  ports:
  - port: 8080
    targetPort: 8080
---
